[package]
name = "dfang"
version = "0.1.3"
authors = ["Patrick Tulskie <patricktulskie@gmail.com>"]
license = "MIT"
description = "A tool to defang IOCs."
readme = "../README.md"
homepage = "https://github.com/patricktulskie/dfang"
repository = "https://github.com/patricktulskie/dfang"
keywords = ["defang", "refang", "IOC"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
regex = "1"
lazy_static = "1"
atty = "0.2.*"
